--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^3.1.10
   firebase_core: ^1.13.1
   loading_overlay: ^0.3.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
