--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^1.13.1
   loading_overlay: ^0.3.0
   provider: ^6.0.3
+  intl: ^0.16.1
+  google_fonts: ^3.0.1
+
 
 dev_dependencies:
   flutter_test:
