--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   firebase_core: ^1.13.1
   loading_overlay: ^0.3.0
   provider: ^6.0.3
-  intl: ^0.16.1
+  intl: ^0.17.0
   google_fonts: ^3.0.1
+  firebase_auth: ^3.3.20
 
 
 dev_dependencies:
